fixed h4 translate - back to 50 50 - vertical change was too much on home page on 4k at least

--- a/web/styles/main.css
+++ b/web/styles/main.css
@@ -30,9 +30,6 @@ html, body {
 }
 
 /* ////////////////////////////////////////////////////////////////////////////////////////////////////////////////////////////////////////////////////// */
-/* SCROLLBAR */
-
-/* ////////////////////////////////////////////////////////////////////////////////////////////////////////////////////////////////////////////////////// */
 /* HEADER & FOOTER */
 
 header {
@@ -134,7 +131,7 @@ h4 {
 	position: absolute;
 	top: 50%;
 	left: 50%;
-    transform: translate(-50%, -70%);
+    transform: translate(-50%, -50%);
     width: 75%;
     opacity: 0%;
     transition: 0.25s;
